Based on professors comments, the network format is incorrect.  Going to test format compatibility

--- a/CMPE 207 Lab 1/Makefile
+++ b/CMPE 207 Lab 1/Makefile
@@ -1,10 +1,10 @@
 default:
 
 compile:
-	gcc Main.c
+	gcc UDPClient.c -o UDPClient 
 
-run:
-	./a.out
+run_UDPClient:
+	./UDPClient
 
 clean: 
 	$(RM) *.out 
