--- a/CMPE 207 Lab 2/Client/Makefile
+++ b/CMPE 207 Lab 2/Client/Makefile
@@ -1,7 +1,7 @@
 default: clean compile
 
 compile:
-	gcc TCP_Client.c -o TCP_Client
+	gcc UDP_Client.c -o UDP_Client
 	
 clean: 
-	rm -f TCP_Client
+	rm -f UDP_Client
