UDP Preforking works.  Will now submit lab 2

--- a/CMPE 207 Lab 2/Client/Makefile
+++ b/CMPE 207 Lab 2/Client/Makefile
@@ -2,6 +2,8 @@ default: clean compile
 
 compile:
 	gcc UDP_Client.c -o UDP_Client
+	gcc TCP_Client.c -o TCP_Client
 	
 clean: 
 	rm -f UDP_Client
+	rm -f TCP_Client
